--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ button {
     width: 100%;
     height: 50px;
     border: none;
-    color: white;
+    color: rgb(112, 174, 250);
     background: var(--cor-verde);
     padding: 0;
     border-radius: 0.25rem;
